<resources>
    <string name="app_name">LogicUniversity_AD</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login">"Login"</string>

    <string name="home">"<u>Back To Home</u>"</string>
    <string name="zone">Fliter By Zone: </string>

    <string-array name="zonelist">
        <item>All</item>
    </string-array>
    <string name="title_activity_successpage">Successpage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pending">Pending Requests</string>
    <string name="request_id_label">Request ID:</string>
    <string name="requestor_label">Requestor:</string>
    <string name="loading">loading..</string>
    <string name="cost_label">Total Cost:</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="appoint_rep_header">Appoint Department Rep</string>
    <string name="dept_rep_label">Current Department Representative:</string>
    <string name="delegate_head_header">Delegate Authority</string>
    <string name="default_acting_head_status">There is no acting head assigned.</string>
    <string name="revoke_authority">Revoke authority</string>
    <string name="acknowledge_disbursement">acknowledge disbursement</string>
    <string name="delegate">Delegate Head</string>
    <string name="rep">Appoint Rep</string>
    <string name="pending_requests_header">Pending Requests</string>
    <string name="request_id_label">Request ID:</string>
    <string name="requestor_label">Requestor:</string>
    <string name="loading">loading..</string>
    <string name="cost_label">Total Cost:</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="appoint_rep_header">Appoint Department Rep</string>
    <string name="dept_rep_label">Current Department Representative:</string>
    <string name="delegate_head_header">Delegate Authority</string>
    <string name="default_acting_head_status">There is no acting head assigned.</string>
    <string name="revoke_authority">Revoke authority</string>
    <string name="acknowledge_disbursement">acknowledge disbursement</string>


</resources>
