<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryStore">

    <ImageView
        android:id="@+id/imageView_dept_head_appoint_rep"
        android:layout_width="89dp"
        android:layout_height="79dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:transitionName="transition_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logic_logo" />

    <TextView
        android:id="@+id/tv_dept_head_appoint_rep_header"
        android:layout_width="0dp"
        android:layout_height="79dp"
        android:gravity="center"
        android:text="@string/appoint_rep_header"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/imageView_dept_head_appoint_rep"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.85"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dept_head_appoint_rep_header"
        app:layout_constraintVertical_bias="0.266"
        app:layout_constraintWidth_percent="0.9">

        <TextView
            android:id="@+id/dept_rep_label"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/dept_rep_label"
            android:textColor="#000070"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dept_rep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loading"
            android:textColor="#000070"
            android:textSize="18sp"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dept_rep_label" />

        <AutoCompleteTextView
            android:id="@+id/ac_employee_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="bottom"
            android:hint="Search employee's name"
            android:textAlignment="center"
            android:textColor="#000070"
            android:textColorHighlight="#79FFFFFF"
            android:textSize="14sp"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dept_rep"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/appoint_error_msg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="#E78590"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ac_employee_list" />

        <Button
            android:id="@+id/appoint_rep_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="Appoint rep"
            android:textSize="16sp"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appoint_error_msg"
            app:layout_constraintWidth_percent="0.4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>