<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryStore" >


    <ImageView
        android:id="@+id/imageView_dept_head_delegate_head"
        android:layout_width="89dp"
        android:layout_height="79dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:transitionName="transition_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logic_logo" />

    <TextView
        android:id="@+id/tv_dept_head_delegate_head_header"
        android:layout_width="0dp"
        android:layout_height="79dp"
        android:gravity="center"
        android:text="@string/delegate_head_header"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/imageView_dept_head_delegate_head"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.85"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dept_head_delegate_head_header"
        app:layout_constraintVertical_bias="0.266"
        app:layout_constraintWidth_percent="0.9">

        <TextView
            android:id="@+id/acting_head_status"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/default_acting_head_status"
            android:textColor="#000070"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/revoke_auth_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/revoke_authority"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/acting_head_status"
            app:layout_constraintWidth_percent="0.8" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/select_head_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/revoke_auth_button">

            <TextView
                android:id="@+id/ac_employee_head_label"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="bottom"
                android:hint="Select acting head:"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/ac_employee_head_list"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.4" />

            <AutoCompleteTextView

                android:id="@+id/ac_employee_head_list"
                android:layout_width="0dp"
                android:layout_height="0dp"

                android:allowUndo="false"
                android:gravity="bottom"
                android:hint="Search employee's name"
                android:textAlignment="center"
                android:textColor="#000070"
                android:textSize="14sp"
                app:layout_constraintHeight_percent="0.23"
                app:layout_constraintLeft_toRightOf="@id/ac_employee_head_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />
            <Button
                android:id="@+id/assign_head_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:text="Assign Head"
                android:textSize="16sp"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintHorizontal_bias="0.886"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ac_employee_head_list"
                app:layout_constraintWidth_percent="0.4" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>